# WildfireFrontDynamics

./: .gitignore  AUDITORIA_DATASETS_MVP.md  ESTUDIO_FIRE_FRONT_TRACKER.md  README.md  pyproject.toml
data/candidates/semireal_controlled_001/: README.md
data/candidates/semireal_controlled_001/annotations/: semireal_controlled_001_20260610_120000.tif  (+3 more)
docs/: COMPLETION_AUDIT_GEOTIFF.md  GEOTIFF_INPUT_CONTRACT.md  MVP_ARCHITECTURE.md  NEXT_DATA_VALIDATION_MILESTONE.md  PROMPT_NEXT_MILESTONE.md  PROPUESTA_ARQUITECTURA_PREDICCION_ML.md  PROVENANCE.md  REAL_SEQUENCE_AUDIT_semireal_controlled_001.md  SCIENTIFIC_CORE.md  SCIENTIFIC_ITERATION_AUDIT.md
kaggle_job/: kernel-metadata.json  run_training.py
models/: config.json
research/: chinese_research.md  cloud_training_setup.md  datasets.md  expert_consensus.md  implementation_roadmap.md  models.md  pretrained_models.md  training_strategy.md
scripts/: audit_dataset_candidate.py  generate_geotiff_fixture.py  generate_semireal_candidate.py  run_data_validation_sprint.py  run_mvp.cmd  verify_data_validation_milestone.py
tests/: test_data_validation_milestone.py  test_dataset_candidate_audit.py  test_evaluation_quality.py  test_geometry_speed.py  test_geotiff_ingestion.py  test_identity.py  test_ml_pipeline.py  test_pipeline.py
wildfire_front/: __init__.py  cli.py  evaluation.py  geometry_speed.py  identity.py  models.py  outputs.py  quality.py  reconstruction.py  synthetic.py
wildfire_front/ingestion/: __init__.py  geotiff.py
wildfire_front/ml/: __init__.py  cloud_train.py  dataset.py  train.py
(+8 files in other folders)
