[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wildfire-front-dynamics"
version = "0.1.0"
description = "Auditable MVP for wildfire front reconstruction"
requires-python = ">=3.11"
dependencies = ["numpy>=2.0", "rasterio>=1.4"]

[project.scripts]
wildfire-front = "wildfire_front.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wildfire_front*"]
